<resources>
    <string name="app_name">MSA</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">E-mail</string>
    <string name="passwordConfirm">Password Confirm</string>
    <string name="title">Title</string>
    <string name="url">URL</string>
    <string name="addNewMusic">Add new music</string>
    <string name="registration">Registration</string>
    <string name="save">Save</string>
    <string name="show_all">Show All</string>
</resources>